Start working on the header.

--- a/index.html
+++ b/index.html
@@ -7,52 +7,20 @@
 	</head>
 
 	<header>
-
+		<div class="logo">
+			<img src="./resources/images/img-myt-logo.jpg" alt="identify">
+			<span>My Times</span>
+		</div>
+		<nav>
+			<span><a href="#">World</a></span>
+			<span><a href="#">U.S.</a></span>
+			<span><a href="#">Tech</a></span>
+			<span><a href="#">Science</a></span>
+		</nav>
 	</header>
 
 	<body>
 
-		<div class="image-headers">
-			<h1>Broadway Design</h1>
-			<p><a class="links" href="#">Home</a></p>
-			<p><a class="links"href="#process">Process</a></p>
-			<p><a class="links"href="#work">Work</a></p>
-			<p><a class="links"href="#team">Team</a></p>
-			<p><a class="links"href="#contact">Contact</a></p>
-		</div>
-
-
-
-		<div>
-			<h2 id="process">Our Process</h2>
-			<p><img src="./resources/images/identify.svg" alt="identify"></p>
-			<h3>Identify</h3>
-			<p>We focus on the most important details.</p>
-
-			<p><img src="./resources/images/understand.svg" alt="understand"></p>
-			<h3>Understand</h3>
-			<p>We study our projects inside and out.</p>
-
-			<p><img src="./resources/images/execute.svg" alt="execute"></p>
-			<h3>Identify</h3>
-			<p>We put everything we have into our work.</p>
-		</div>
-
-		<div>
-			<h3 class="image-headers">Designed in New York</h3>
-			<h3 id="work">Portfolio</h3>
-			<p>Coming Soon</p>
-			<h3 id="team">Team</h3>
-			<p>We're Hiring!</p>
-			<h3 id="contact">Contact</h3>
-			<p>Phone: (555)-555-5555</p>
-			<p>E-mail: test@example.com</p>
-			<p>Twitter: @test</p>
-		</div>
-
-		<div class="footer-box">
-			<p><span class="footer-copyright">© Broadway 2017</span> <a class="links" href="#">Home</a> <a class="links"href="#process">Process</a> <a class="links"href="#work">Work</a> <a class="links"href="#team">Team</a> <a class="links"href="#contact">Contact</a></p>
-		</div>
 
 	</body>
 </html>
